SERVER-90297 Remove assertion on empty field match expression in rewriting change stream pipeline (#21990)

SERVER-90297 Remove assertion on empty field match expression in
rewriting change stream pipeline

rewriteMatchExpressionTree expects PathMatchExpression always has
non-empty field path. This causes a change stream pipeline with empty
field match expression to fail. This commit relaxes the restriction by
removing the assertion. The rewriter simply skips the rewrite upon
observing an empty field path from PathMatchExpression.

GitOrigin-RevId: 16753e8bc7484fa43fd9a7f913e8608be1638a50